# chronlang-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  compile-grammar.ts  deno.jsonc  mod.ts  package.json  temp.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish-deno.yml  publish-node.yml  publish.yml  tag-version.yml
example/: demo.lang
lib/: compiler.ts  diachronics.ts  module.ts  phonemics.ts  sound-change.ts  word.ts
src/: compiler.rs  compiler.ts  diachronics.ts  grammar.pegjs  grammar.ts  language.rs  lib.rs  mod.ts  module.ts  parser.ts  phonemics.ts  project.rs  resolver.rs  sound-change.ts  tag.rs  word.rs  word.ts
src/ast/: mod.ts  sound-change.ts  statements.ts
stdlib/core/: ipa.lang
tests/: compiler.test.ts  language.test.ts  mock-resolver.ts
tests/parser/: class.test.ts  error.test.ts  import.test.ts  language.test.ts  milestone.test.ts  module.test.ts  series.test.ts  sound-change.test.ts  trait.test.ts  word.test.ts
web-wrapper/: index.ts  package.json  vite.config.ts
